--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,13 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  font-family: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
+  color: #213547
+  overflow: hidden;
+  display: block;
   place-items: center;
+  -webkit-font-smoothing: antialiased;
+  -mox-osx-font-smoothing: grayscale;
   min-width: 320px;
   min-height: 100vh;
 }
