--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -8,8 +8,73 @@
     max-height: 90%;
 }
   h1{
-    img { 
-      width: 32px;
+    color: #fff;
+    font-size: 45px;
+    margin: 0;
+    font-family: 'Coolvetica';
+    font-weight: 400;
+
+    &::before {
+      content: '<h1>';
+      font-family: "La Belle Aurore";
+      color: #00aeff;
+      font-size: 18px;
+      position: absolute;
+      margin-top: -40;
+      left: 10px;
+      opacity: 0.5;
     }
+
+    &::after {
+      content:" <h1/>";
+      font-family: "La Belle Aurore";
+      color: #00aeff;
+      position: absolute;
+      margin-top: 15px;
+      margin-bottom: 20px;
+      animation: fadeIn 1s 1.7s backwards;
+      opacity: 0.3;
+}
+
+    img {
+      height: 100px;
+      width: 100px;
+      margin-left: 20px;
+      height:auto;
+      animation: rotateIn 1s linear both;
+      animation-delay: 1.4s;
+
+}
+
   }
+  h2 {
+    color:#97951a;
+    margin-top: 20px;
+    font-weight: 400;
+    font-size: sans-serif;
+    letter-spacing: 3px;
+    animation:fadein 1s 1.8s backwards    ;
+    -webkit-animation:fadein 1s 1.8s backwards    ;
+}
+
+.flat-button {
+  color:#00aeff;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 3px;
+  font-family: sans-serif;
+  text-decoration: none;
+  padding: 10px;
+  border: 1px solid #00aeff;
+  margin-top: 20px;
+  float: left;
+  animation: fadeIn 1s 1.5s backwards;
+  white-space: nowrap;
+  
+  &::hover {
+    background: #00aeff;
+    color: #333;
+
+  }
+}
 }
