animated letters start

--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -56,6 +56,17 @@
     animation:fadein 1s 1.8s backwards    ;
     -webkit-animation:fadein 1s 1.8s backwards    ;
 }
+h3 {
+  color:#fff;
+  margin-top: 20px;
+    font-weight: 400;
+    font-size: sans-serif;
+    letter-spacing: 3px;
+    animation:fadein 1s 1.8s backwards    ;
+    -webkit-animation:fadein 1s 1.8s backwards
+
+}
+
 
 .flat-button {
   color:#00aeff;
