--- a/src/components/sidebar/index.scss
+++ b/src/components/sidebar/index.scss
@@ -3,8 +3,8 @@ body {
   padding: 0;
 }      
     .nav-bar {
-      background: rgba(0, 0, 0, 0.932);
-      width: 100px;
+      background: rgb(0, 0, 0);
+      width: 125px;
       height: 100%;
       position: absolute;
       top: 0;
@@ -19,8 +19,8 @@ body {
 
       img {
         display: block;
-        margin: 10px auto;
-        width: 90px;
+        margin: 100px auto;
+        width: 125px;
         height: auto;
 
         &.sub-logo {
