--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
   color: #444;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #273136;
+  /* background: #0b0d0e; */
+   background: #273136;
   overflow: hidden;
   display: block;
 }
