--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -1,7 +1,7 @@
 .home-page {
   .text-zone {
     position: absolute;
-    left: 10%;
+    left: 1%;
     top: 50%;
     transform: translateY(-50%);
     width: 40%;
@@ -9,37 +9,19 @@
 }
   h1{
     color: #fff;
+    margin-left: 10px;
     font-size: 45px;
     margin: 0;
     font-family: 'Coolvetica';
     font-weight: 400;
 
-    &::before {
-      content: '<h1>';
-      font-family: "La Belle Aurore";
-      color: #00aeff;
-      font-size: 18px;
-      position: absolute;
-      margin-top: -40;
-      left: 10px;
-      opacity: 0.5;
-    }
-
-    &::after {
-      content:" <h1/>";
-      font-family: "La Belle Aurore";
-      color: #00aeff;
-      position: absolute;
-      margin-top: 15px;
-      margin-bottom: 20px;
-      animation: fadeIn 1s 1.7s backwards;
-      opacity: 0.3;
-}
+   
++
 
     img {
       height: 100px;
       width: 100px;
-      margin-left: 20px;
+      margin-right: 200px;
       height:auto;
       animation: rotateIn 1s linear both;
       animation-delay: 1.4s;
@@ -67,7 +49,7 @@
   padding: 10px;
   border: 1px solid #00aeff;
   margin-top: 20px;
-  float: left;
+  float: none;
   animation: fadeIn 1s 1.5s backwards;
   white-space: nowrap;
   
