--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -69,12 +69,12 @@ textarea {
 }
 
 .flat-button {
-  color: #ff1100;
+  color: #000000;
   font-size: 11px;
   letter-spacing: 3px;
   text-decoration: none;
   padding: 8px 10px;
-  border: 1px solid #ffd700;
+  border: 1px solid #000000;
   border-radius: 4px;
   text-transform: uppercase;
   float: right;
