--- a/src/components/sidebar/index.scss
+++ b/src/components/sidebar/index.scss
@@ -98,7 +98,15 @@ body {
                 content: 'CONTACT';
         
               }
+                           
             }
+                        a.projects-link {
+                          &:after {
+                            content: 'PROJECTS';
+            
+                          }
+                        }
+                        
             
       a.active {
         svg {
